@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
 
 CHANGES IN V2.0.0
 
+	- libcupsfilters: Added filterChain() filter function to run
+	  several filter functions in a chain.
 	- libcupsfilters, pdftopdf: Moved core functionality of
 	  pdftopdf into the pdftopdf() filter function (Pull request
 	  #301).
